--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   cloud_firestore: ^5.6.6
   firebase_analytics: ^11.4.5
   flutter_bloc: ^9.1.0
+  provider: ^6.1.4
+  dart_either: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +61,7 @@ dev_dependencies:
   isar_generator:
     hosted: https://pub.isar-community.dev
     version: 3.1.8
+  build_runner: ^2.4.15
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
