signup and signin feature implemented

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_bloc: ^9.1.0
   provider: ^6.1.4
   dart_either: ^2.0.0
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
