--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   path_provider: ^2.1.5
   intl: ^0.20.2
   expansion_tile_group: ^2.2.0
+  meta: ^1.16.0
+  bloc: ^9.0.0
 
 dev_dependencies:
   flutter_test:
